// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logs should render a default message 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  title="No log data found"
>
  <p>
    <MemoizedFormattedMessage
      defaultMessage="We did not find any log data and we are unable to diagnose why. {link}"
      id="xpack.monitoring.logs.reason.defaultMessage"
      values={
        Object {
          "link": <EuiLink
            href="jest-metadata-mock-url"
            target="_blank"
          >
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Please verify your setup is correct."
              id="xpack.monitoring.logs.reason.defaultMessageLink"
            />
          </EuiLink>,
        }
      }
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a bad indices reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  title="Corrupted filebeat index"
>
  <p>
    <MemoizedFormattedMessage
      defaultMessage="There is an issue reading from your filebeat indices.  {link}."
      id="xpack.monitoring.logs.reason.correctIndexNameMessage"
      values={
        Object {
          "link": <EuiLink
            href="jest-metadata-mock-url"
            target="_blank"
          >
            Click here for more information
          </EuiLink>,
        }
      }
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a no cluster found reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  title="No logs for this cluster"
>
  <p>
    <MemoizedFormattedMessage
      defaultMessage="Check that your {link} is correct."
      id="xpack.monitoring.logs.reason.noClusterMessage"
      values={
        Object {
          "link": <EuiLink
            href="jest-metadata-mock-url"
            target="_blank"
          >
            setup
          </EuiLink>,
        }
      }
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a no index found reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  title="No logs for this index"
>
  <p>
    <MemoizedFormattedMessage
      defaultMessage="We found logs, but none for this index. If this problem continues, check that your {link} is correct."
      id="xpack.monitoring.logs.reason.noIndexMessage"
      values={
        Object {
          "link": <EuiLink
            href="jest-metadata-mock-url"
            target="_blank"
          >
            setup
          </EuiLink>,
        }
      }
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a no index pattern found reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  title="No log data found"
>
  <p>
    <MemoizedFormattedMessage
      defaultMessage="Set up {link}, then configure your Elasticsearch output to your monitoring cluster."
      id="xpack.monitoring.logs.reason.noIndexPatternMessage"
      values={
        Object {
          "link": <EuiLink
            href="jest-metadata-mock-url"
            target="_blank"
          >
            Filebeat
          </EuiLink>,
        }
      }
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a no node found reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  title="No logs for this Elasticsearch node"
>
  <p>
    <MemoizedFormattedMessage
      defaultMessage="Check that your {link} is correct."
      id="xpack.monitoring.logs.reason.noNodeMessage"
      values={
        Object {
          "link": <EuiLink
            href="jest-metadata-mock-url"
            target="_blank"
          >
            setup
          </EuiLink>,
        }
      }
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a no structured logs reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  title="No structured logs found"
>
  <p>
    <MemoizedFormattedMessage
      defaultMessage="Check if the {varPaths} setting {link}."
      id="xpack.monitoring.logs.reason.notUsingStructuredLogsMessage"
      values={
        Object {
          "link": <EuiLink
            href="jest-metadata-mock-url"
            target="_blank"
          >
            points to JSON logs
          </EuiLink>,
          "varPaths": <Monospace>
            var.paths
          </Monospace>,
        }
      }
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a no type found reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  title="No logs for Elasticsearch"
>
  <p>
    <MemoizedFormattedMessage
      defaultMessage="Follow {link} to set up Elasticsearch."
      id="xpack.monitoring.logs.reason.noTypeMessage"
      values={
        Object {
          "link": <EuiLink
            href="jest-metadata-mock-url"
            target="_blank"
          >
            these directions
          </EuiLink>,
        }
      }
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a time period reason 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  title="No logs for the selected time"
>
  <p>
    <MemoizedFormattedMessage
      defaultMessage="Use the time filter to adjust your timeframe."
      id="xpack.monitoring.logs.reason.noIndexPatternInTimePeriodMessage"
    />
  </p>
</EuiCallOut>
`;

exports[`Logs should render with a time period reason for both scenarios 1`] = `
<EuiCallOut
  color="warning"
  iconType="help"
  title="No logs for the selected time"
>
  <p>
    <MemoizedFormattedMessage
      defaultMessage="Use the time filter to adjust your timeframe."
      id="xpack.monitoring.logs.reason.noIndexPatternInTimePeriodMessage"
    />
  </p>
</EuiCallOut>
`;
